--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@clack/prompts": "^0.10.0",
+    "@this-is-to-learn/create-js-monorepo": "file:",
     "kleur": "^4.1.5",
     "mustache": "^4.2.0"
   }
