--- a/template/server/package.json
+++ b/template/server/package.json
@@ -22,8 +22,10 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
     "supertest": "^7.1.0",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.3.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
