--- a/template/server/package.json
+++ b/template/server/package.json
@@ -26,6 +26,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
     "supertest": "^7.1.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.3.0",
     "tsx": "^4.19.3",
